--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  map_launcher: ^2.4.0
+  flutter_phone_direct_caller: ^2.1.1
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
